# travel_itinerary_planner

./: README.md  pyproject.toml
output/: itinerary.md
src/travel_itinerary_planner/: crew.py  main.py  streamlit_app.py
src/travel_itinerary_planner/config/: agents.yaml  tasks.yaml
src/travel_itinerary_planner/tools/: trip_duration_validator.py
