[project]
name = "travel_itinerary_planner"
version = "0.1.0"
description = "travel_itinerary_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0",
    "streamlit>=1.57.0",
]

[project.scripts]
travel_itinerary_planner = "travel_itinerary_planner.main:run"
run_crew = "travel_itinerary_planner.main:run"
train = "travel_itinerary_planner.main:train"
replay = "travel_itinerary_planner.main:replay"
test = "travel_itinerary_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
